--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -39,7 +39,7 @@
         hint: {
           text: hint
         },
-        errorMessage: { text: error.text | safe } if errors,
+        errorMessage: { text: error.text } if errors,
         items: [
           {
             id: "nearest-court",
