--- a/src/main/views/postcode-search.njk
+++ b/src/main/views/postcode-search.njk
@@ -45,7 +45,7 @@
         hint: {
           text: example
         },
-        errorMessage: { text: errorText[errorType] | safe } if error,
+        errorMessage: { text: errorText[errorType] } if error,
         autocomplete: "postal-code"
       }) }}
       {{ govukButton({
@@ -59,7 +59,7 @@
         <p class="govuk-body">{{ noResults.p2 }}</p>
         <ul class="govuk-list govuk-list--bullet">
           {% for item, text in noResults.list %}
-          <li>{{ text | safe }}</li>
+          <li>{{ text }}</li>
           {% endfor %}
         </ul>
       </div>
