--- a/src/main/views/postcode-results.njk
+++ b/src/main/views/postcode-results.njk
@@ -26,7 +26,25 @@
     </h1>
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-grid-row">
-        {% if results.courts.length > 1 %}
+        {% if isDivorceOrCivil %}
+          <div>
+            <p class="govuk-body-m">
+              {% if serviceArea === 'divorce' %}
+                {{ divorceHint }}
+              {% else %}
+                {{ civilHint }}
+              {% endif %}
+               {{ secondHint }}
+              <br>
+              {{ thirdHint }}
+            </p>
+          </div>
+          <div class="search-result">
+            <h2 class="govuk-heading-m">
+              <a class="govuk-link" href="/courts/{{ results.courts[0].slug }}">{{ results.courts[0].name }}</a>
+            </h2>
+          </div>
+        {% else %}
           <div>
             <p class="govuk-body-m">
               {{ multipleResultsHint }}
@@ -34,32 +52,19 @@
           </div>
           <div id="search-results">
             {% for court in results.courts %}
-              <div class="govuk-grid-row">
-                <div class="govuk-grid-column-three-quarters">
-                  <h2 class="govuk-heading-m">
-                    <a class="govuk-link" href="/courts/{{ court.slug }}">{{ court.name }}</a>
-                  </h2>
-                </div>
-                <div class="govuk-grid-column-one-quarter distance">
-                  <p class="govuk-body-m">
-                    {{ court.distance }} {{ unit }}
-                  </p>
-                </div>
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-three-quarters">
+                <h2 class="govuk-heading-m">
+                  <a class="govuk-link" href="/courts/{{ court.slug }}">{{ court.name }}</a>
+                </h2>
               </div>
+              <div class="govuk-grid-column-one-quarter distance">
+                <p class="govuk-body-m">
+                  {{ court.distance }} {{ unit }}
+                </p>
+              </div>
+            </div>
             {% endfor %}
-          </div>
-        {% else %}
-          <div>
-            <p class="govuk-body-m">
-              {{ hint }}
-              <br>
-              {{ secondHint }}
-            </p>
-          </div>
-          <div class="search-result">
-            <h2 class="govuk-heading-m">
-              <a class="govuk-link" href="/courts/{{ court.slug }}">{{ court.courtName }}</a>
-            </h2>
           </div>
         {% endif %}
       </div>
