re-add safe for court info

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -76,7 +76,7 @@
             {{ additionalInfoHeading }}
           </h3>
           <p class="govuk-body-m">
-            {{ results.info }}
+            {{ results.info | safe }}
           </p>
         </div>
       {% endif %}
