FACT-180: Clean up and add welsh

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -35,6 +35,7 @@
       html: feedback + languageToggle
     })
   }}
+  <a href="/" class="govuk-back-link" onclick="goBack(event);">{{ backLink }}</a>
 {% endblock %}
 
 {% block footer %}
