--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -6,6 +6,16 @@
   {{ title }}
 {% endblock %}
 
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+      tag: {
+        text: "beta"
+      },
+      html: feedback + languageToggle
+    })
+  }}
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
