Fact 180 back link (#140)
* FACT-180: Change referer policy and update controllers to use back path

* FACT-180: Implementation

* FACT-180: Functional tests

* FACT-180: Clean up

* FACT-180: Clean up

* FACT-180: Clean up and add welsh

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -35,6 +35,7 @@
       html: feedback + languageToggle
     })
   }}
+  <a href="/" class="govuk-back-link" onclick="goBack(event);">{{ backLink }}</a>
 {% endblock %}
 
 {% block footer %}
@@ -75,6 +76,12 @@
 {% endblock %}
 
 {% block bodyEnd %}
+  <script>
+  function goBack(e) {
+    e.preventDefault();
+    history.go(-1);
+  }
+  </script>
   {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   {% include "webpack/js.njk" %}
 {% endblock %}
