--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -38,8 +38,8 @@
         {% endif %}
         {% for result in results %}
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id={{ result.slug }} name="serviceArea" type="radio" value={{ result.slug }} >
-                <label class="govuk-label govuk-radios__label govuk-label--s" for={{ result.slug }}>
+                <input class="govuk-radios__input" id="{{ result.slug }}" name="serviceArea" type="radio" value="{{ result.slug }}" >
+                <label class="govuk-label govuk-radios__label govuk-label--s" for="{{ result.slug }}">
                     {{ result.name }}
                 </label>
                 <div class="govuk-hint govuk-radios__hint">
