displaying distance to 1 decimal place

--- a/src/main/views/postcode-results.njk
+++ b/src/main/views/postcode-results.njk
@@ -51,7 +51,7 @@
               </div>
               <div class="govuk-grid-column-one-quarter distance">
                 <p class="govuk-body-m">
-                  {{ court.distance }} {{ unit }}
+                  {{ court.distance.toFixed(1) }} {{ unit }}
                 </p>
               </div>
             </div>
