--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -178,13 +178,15 @@
           </h3>
           <ul class="govuk-list">
             {% for area in results['areas_of_law'] | sort(attribute="name") %}
+              {% for serviceArea in area['service_areas'] | sort(attribute="name") %}
               <li>
                 {% if area.external_link %}
-                  <a class="govuk-link" href="{{ area.external_link }}">{{ area.name }}</a>
+                  <a class="govuk-link" href="{{ area.external_link }}">{{ serviceArea.name }}</a>
                 {% else %}
-                  {{ area.name }}
+                  {{ serviceArea.name }}
                 {% endif %}
               </li>
+              {% endfor %}
             {% endfor %}
           </ul>
         </div>
