--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -112,13 +112,15 @@
           </h3>
           <ul class="govuk-list">
             {% for area in results['areas_of_law'] | sort(attribute="name") %}
-            <li>
-              {% if area.external_link %}
-                <a class="govuk-link" href="{{ area.external_link }}">{{ area.name }}</a>
-              {% else %}
-                {{ area.name }}
-              {% endif %}
-            </li>
+              {% for serviceArea in area['service_areas'] | sort(attribute="name") %}
+              <li>
+                {% if area.external_link %}
+                  <a class="govuk-link" href="{{ area.external_link }}">{{ serviceArea.name }}</a>
+                {% else %}
+                  {{ serviceArea.name }}
+                {% endif %}
+              </li>
+              {% endfor %}
             {% endfor %}
           </ul>
         </div>
