condition for image

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -164,12 +164,14 @@
     </div>
 
     <div class="govuk-grid-column-one-third side-content">
-      <div class="govuk-grid-row">
-        <img src="{{ results.image_file }}" alt="Front view of {{ results.name }}">
-        <p class="govuk-body-s">
-          {{ results.name }}
-        </p>
-      </div>
+      {% if results.image_file %}
+        <div class="govuk-grid-row">
+          <img src="{{ results.image_file }}" alt="Front view of {{ results.name }}">
+          <p class="govuk-body-s">
+            {{ results.name }}
+          </p>
+        </div>
+      {% endif %}
 
       {% if results['areas_of_law'] and results['areas_of_law'].length > 0 %}
         <div class="govuk-grid-row" id="areas-of-law">
