FACT-241: scale images

--- a/src/main/assets/scss/court-details.scss
+++ b/src/main/assets/scss/court-details.scss
@@ -3,6 +3,10 @@
 
   .side-content {
     padding: 0 30px;
+    img {
+      width: 100%;
+      max-width: 400px;
+    }
   }
 
   .multiple-addresses {
