--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -190,7 +190,7 @@
             {% set externalLink = area['external_link'] %}
             {% endif %}
               <li>
-                {% if area.external_link %}
+                {% if externalLink %}
                   <a class="govuk-link" href="{{ externalLink }}">{{ displayName }}</a>
                 {% else %}
                   {{ displayName }}
