--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -18,6 +18,12 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-M3ZT6Q5');</script>
 
+  {% if showCookieBanner %}
+    <div id="global-cookie-message">
+      <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about cookies</a></p>
+    </div>
+  {% endif %}
+
 {% endblock %}
 
 {% block header %}
