--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -19,8 +19,12 @@
   })(window,document,'script','dataLayer','GTM-M3ZT6Q5');</script>
 
   {% if showCookieBanner %}
-    <div id="global-cookie-message">
-      <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about cookies</a></p>
+    <div class="global-cookie-message">
+      <div class="govuk-width-container">
+        <p class="govuk-body-s">
+          {{ cookieBanner | safe }}
+        </p>
+      </div>
     </div>
   {% endif %}
 
