--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -111,13 +111,23 @@
           </h3>
           <ul class="govuk-list">
             {% for area in results['areas_of_law'] | sort(attribute="name") %}
-            <li>
-              {% if area.external_link %}
-                <a class="govuk-link" href="{{ area.external_link }}">{{ area.name }}</a>
-              {% else %}
-                {{ area.name }}
-              {% endif %}
-            </li>
+            {% if area['display_name'] %}
+            {% set displayName = area['display_name'] %}
+            {% else %}
+            {% set displayName = area.name %}
+            {% endif %}
+            {% if area['display_external_link'] %}
+            {% set externalLink = area['display_external_link'] %}
+            {% else %}
+            {% set externalLink = area['external_link'] %}
+            {% endif %}
+              <li>
+                {% if externalLink %}
+                  <a class="govuk-link" href="{{ externalLink }}">{{ displayName }}</a>
+                {% else %}
+                  {{ displayName }}
+                {% endif %}
+              </li>
             {% endfor %}
           </ul>
         </div>
