changing tag to div to allow child tags

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -65,9 +65,9 @@
           <h3 class="govuk-heading-m">
             {{ additionalInfoHeading }}
           </h3>
-          <p class="govuk-body-m">
+          <div class="govuk-body-m">
             {{ results.info | safe }}
-          </p>
+          </div>
         </div>
       {% endif %}
 
