fact 249 - adding conditions to fix spacing with full stop

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -144,15 +144,14 @@
           <p class="govuk-body-m">
             {{ buildingFacilitiesP1 }}
             {% if results.enquiries.email or results.enquiries.phone.length > 0 %}
-              {% if results.enquiries.email %}
-                <a class="govuk-link" href="mailto:{{ results.enquiries.email.address }}">{{ results.enquiries.email.address }}</a>
-              {% endif %}
               {% if results.enquiries.email and results.enquiries.phone.length > 0 %}
-                {{ buildingFacilitiesMultipleContacts }}
+                <a class="govuk-link" href="mailto:{{ results.enquiries.email.address }}">{{ results.enquiries.email.address }}</a>
+                {{ buildingFacilitiesMultipleContacts }} {{ results.enquiries.phone[0].number }}&#46;
+              {% elif results.enquiries.email %}
+                <a class="govuk-link" href="mailto:{{ results.enquiries.email.address }}">{{ results.enquiries.email.address }}</a>&#46;
+              {% elif results.enquiries.phone.length > 0 %}
+                 {{ results.enquiries.phone[0].number }}&#46;
               {% endif %}
-              {% if results.enquiries.phone %}
-                {{ results.enquiries.phone[0].number }}
-              {% endif %}.
             {% else %}
               {{ buildingFacilitiesContactsUs }}
             {% endif %}
