--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -2,8 +2,6 @@
 @import 'court-details';
 @import 'postcode-results';
 
-$cookie-banner-colour: #d5e8f3;
-
 // sass-lint:disable class-name-format
 .govuk-phase-banner__text {
   width: 100%;
@@ -14,7 +12,7 @@ $cookie-banner-colour: #d5e8f3;
 }
 
 .global-cookie-message {
-  background-color: $cookie-banner-colour;
+  background-color: govuk-colour("light-grey");
   padding: 10px 30px;
 
   p {
