--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -12,7 +12,7 @@
 }
 
 .global-cookie-message {
-  background-color: govuk-colour("light-grey");
+  background-color: govuk-colour('light-grey');
   padding: 10px 30px;
 
   p {
