FACT-278: DAC - Remove alt text on image

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -177,7 +177,7 @@
     <div class="govuk-grid-column-one-third side-content">
       {% if results['image_file'] %}
         <div class="govuk-grid-row">
-          <img src="{{ results.image_file }}" alt="{{ altImageText }} {{ results.name }}">
+          <img src="{{ results.image_file }}" alt="">
           <p class="govuk-body-s">
             {{ results.name }}
           </p>
