FACT-279: DAC - search results

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -5,7 +5,11 @@
 {% extends "template.njk" %}
 
 {% block pageTitle %}
-  {{ title }}
+  {% if (path !== '/search-by-name') %}
+    {{ resultsTitle }}
+  {% else %}
+    {{ title }}
+  {% endif %}
 {% endblock %}
 
 {% block content %}
