FACT-281: DAC - Error title

--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -5,6 +5,9 @@
 {% extends "template.njk" %}
 
 {% block pageTitle %}
+  {% if errors %}
+    {{ errorTitle }}
+  {% endif %}
   {{ title }}
 {% endblock %}
 
