FACT-71: Accessibility statement

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -60,7 +60,7 @@
           text: cookies
         },
         {
-          href: "https://find-court-tribunal.service.gov.uk/accessibility-statement",
+          href: "/accessibility-statement",
           text: accessibility
         },
         {
