--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -10,3 +10,12 @@
     float: right;
   }
 }
+
+.global-cookie-message {
+  background-color: govuk-colour('light-grey');
+  padding: 10px 30px;
+
+  p {
+    margin-bottom: 0;
+  }
+}
