--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -18,6 +18,16 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-M3ZT6Q5');</script>
 
+  {% if showCookieBanner %}
+    <div class="global-cookie-message">
+      <div class="govuk-width-container">
+        <p class="govuk-body-s">
+          {{ cookieBanner | safe }}
+        </p>
+      </div>
+    </div>
+  {% endif %}
+
 {% endblock %}
 
 {% block header %}
@@ -56,7 +66,7 @@
           text: privacy
         },
         {
-          href: "",
+          href: "https://www.gov.uk/help/cookies",
           text: cookies
         },
         {
