--- a/src/main/views/postcode-results.njk
+++ b/src/main/views/postcode-results.njk
@@ -36,7 +36,7 @@
         {% else %}
           <div>
             <p class="govuk-body-m">
-              {{ multipleResultsHint }}
+              {{ singleResultsHint if results.courts.length === 1 else multipleResultsHint }}
             </p>
           </div>
           <div id="search-results">
