--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -66,7 +66,7 @@
           text: privacy
         },
         {
-          href: "https://www.gov.uk/help/cookies",
+          href: "/cookies",
           text: cookies
         },
         {
