--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -14,7 +14,15 @@
 .global-cookie-message {
   background-color: govuk-colour('light-grey');
   padding: 10px 30px;
-
+  h1 {
+    margin-bottom: 0;
+  }
+  button {
+    margin-bottom: 0;
+  }
+  a {
+    margin-bottom: 0;
+  }
   p {
     margin-bottom: 0;
   }
