--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -19,11 +19,16 @@
   })(window,document,'script','dataLayer','GTM-M3ZT6Q5');</script>
 
   {% if showCookieBanner %}
-    <div class="global-cookie-message">
+    <div class="global-cookie-message" id="cookie_banner">
       <div class="govuk-width-container">
-        <p class="govuk-body-s">
-          {{ cookieBanner | safe }}
-        </p>
+          <h1 class="govuk-heading-m">Tell us whether you accept cookies</h1>
+          <p class="govuk-body-s">
+            We use <a href="/cookies">cookies to collect information</a> about how you use the {{
+            service_name }} service. </p>
+          <p class="govuk-body-s"> We use this information to make the website work as well as
+            possible and improve our services.</p>
+          <button type="submit" class="govuk-button">Accept all cookies</button>
+          <a class="govuk-button" href="/cookies">Set cookie preferences</a>
       </div>
     </div>
   {% endif %}
