add draft page content

--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -27,3 +27,16 @@
     margin-bottom: 0;
   }
 }
+
+.success-message {
+  border:5px;
+  border-style:solid;
+  border-color:#28a197;
+  padding:20px;
+  margin-bottom:50px;
+  margin-top:16px;
+}
+
+#cookie-preference-success {
+  display: none;
+}
