--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -1,4 +1,6 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {% extends "template.njk" %}
 
@@ -7,5 +9,164 @@
 {% endblock %}
 
 {% block content %}
+      <h1 class="govuk-heading-xl">
+          {{ h1 }}
+      </h1>
+      <div id="cookie-preference-success">
+        <div class="success-message" aria-labelledby="success-title" role="alert" tabindex="-1">
+          <h2 class="govuk-heading-m">
+            Your cookie settings were saved
+          </h2>
+          <div>
+            <p class="govuk-body-m">Government services may set additional cookies and, if so, will have their own cookie policy and banner.</p>
+          </div>
+          <a class="govuk-link" href="/">Go to homepage</a>
+        </div>
+      </div>
+      <p class="govuk-body-m">{{ p1 }}</p>
+      <p class="govuk-body-m">{{ p2 }}</p>
+      <ul class="govuk-list govuk-list--bullet">
+        {% for bullet in bullets %}
+          <li>{{ bullet }}</li>
+        {% endfor %}
+      </ul>
+      <h2 class="govuk-heading-l">
+        {{ h2 }}
+      </h2>
+      <h3 class="govuk-heading-m">
+        {{ h3 }}
+      </h3>
+
+      {{ govukTable({
+        firstCellIsHeader: true,
+        caption: caption,
+        head: [
+          {
+            text: name,
+            classes: 'govuk-!-width-one-quarter'
+          },
+          {
+            text: purpose,
+            classes: 'govuk-!-width-one-half'
+          },
+          {
+            text: expires,
+            classes: 'govuk-!-width-one-quarter'
+          }
+        ],
+        rows: [
+          [
+            {
+              text: 'i18next'
+            },
+            {
+              text: language
+            },
+            {
+              text: year
+            }
+          ]
+        ]
+      }) }}
+
+      <h3 class="govuk-heading-m">
+          {{ h4 }}
+      </h3>
+
+      {{ govukTable({
+        firstCellIsHeader: true,
+        caption: caption,
+        head: [
+          {
+            text: name,
+            classes: 'govuk-!-width-one-quarter'
+          },
+          {
+            text: purpose,
+            classes: 'govuk-!-width-one-half'
+          },
+          {
+            text: expires,
+            classes: 'govuk-!-width-one-quarter'
+          }
+        ],
+        rows: [
+          [
+            {
+              text: 'fact-cookie-preferences'
+            },
+            {
+              text: cookiePreferences
+            },
+            {
+              text: year
+            }
+          ]
+        ]
+      }) }}
+
+  <h3 class="govuk-heading-m">
+    {{ h5 }}
+  </h3>
+  <p class="govuk-body-m">{{ p3 }}</p>
+  {{ govukTable({
+    firstCellIsHeader: true,
+    caption: caption,
+    head: [
+      {
+        text: name,
+        classes: 'govuk-!-width-one-quarter'
+      },
+      {
+        text: purpose,
+        classes: 'govuk-!-width-one-half'
+      },
+      {
+        text: expires,
+        classes: 'govuk-!-width-one-quarter'
+      }
+    ],
+    rows: [
+      [
+        {
+          text: 'TBA'
+        },
+        {
+          text: "TBA"
+        },
+        {
+          text: 'TBA'
+        }
+      ]
+    ]
+  }) }}
+
+  <form id="cm_user_preference_form" class="js-show">
+    {{ govukRadios({
+      classes: 'govuk-radios',
+      idPrefix: 'analytics',
+      name: 'analytics',
+      fieldset: {
+        legend: {
+          text: "Allow cookies that measure website use?",
+          classes: "govuk-fieldset__legend--s"
+        }
+      },
+      items: [
+        {
+          value: 'on',
+          text: 'Use cookies that measure my website use',
+          checked: true
+        },
+        {
+          value: 'off',
+          text: 'Do not use cookies that measure my website use'
+        }
+      ]
+    }) }}
+    {{ govukButton({
+      text: 'Save'
+    }) }}
+  </form>
 
 {% endblock %}
