--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -14,29 +14,32 @@
 .global-cookie-message {
   background-color: govuk-colour('light-grey');
   padding: 10px 30px;
+
   h1 {
     margin-bottom: 0;
   }
+
   button {
     margin-bottom: 0;
   }
+
   a {
     margin-bottom: 0;
   }
+
   p {
     margin-bottom: 0;
   }
 }
 
 .success-message {
-  border:5px;
-  border-style:solid;
-  border-color:#28a197;
-  padding:20px;
-  margin-bottom:50px;
-  margin-top:16px;
+  border: 5px;
+  border-style: solid;
+  margin-bottom: 50px;
+  margin-top: 16px;
+  padding: 20px;
 }
 
-#cookie-preference-success {
+.cookie-preference-success {
   display: none;
 }
