--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-xl">
           {{ h1 }}
       </h1>
-      <div id="cookie-preference-success">
+      <div class="cookie-preference-success">
         <div class="success-message" aria-labelledby="success-title" role="alert" tabindex="-1">
           <h2 class="govuk-heading-m">
             Your cookie settings were saved
