--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -15,12 +15,12 @@
       <div class="cookie-preference-success">
         <div class="success-message" aria-labelledby="success-title" role="alert" tabindex="-1">
           <h2 class="govuk-heading-m">
-            Your cookie settings were saved
+              {{ saved }}
           </h2>
           <div>
-            <p class="govuk-body-m">Government services may set additional cookies and, if so, will have their own cookie policy and banner.</p>
+            <p class="govuk-body-m">{{ additionalCookies }}</p>
           </div>
-          <a class="govuk-link" href="/">Go to homepage</a>
+          <a class="govuk-link" href="/">{{ homePageLink }}</a>
         </div>
       </div>
       <p class="govuk-body-m">{{ p1 }}</p>
