--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -191,16 +191,18 @@
           </h3>
           <ul class="govuk-list">
             {% for area in results['areas_of_law'] | sort(attribute="name") %}
-            {% if area['display_name'] %}
-            {% set displayName = area['display_name'] %}
-            {% else %}
-            {% set displayName = area.name %}
-            {% endif %}
-            {% if area['display_external_link'] %}
-            {% set externalLink = area['display_external_link'] %}
-            {% else %}
-            {% set externalLink = area['external_link'] %}
-            {% endif %}
+              {% if area.name === 'Divorce' %}
+                {% set displayName = divorceHearings %}
+              {% elseif area['display_name'] %}
+                {% set displayName = area['display_name'] %}
+              {% else %}
+                {% set displayName = area.name %}
+              {% endif %}
+              {% if area['display_external_link'] %}
+                {% set externalLink = area['display_external_link'] %}
+              {% else %}
+                {% set externalLink = area['external_link'] %}
+              {% endif %}
               <li>
                 {% if externalLink %}
                   <a class="govuk-link" href="{{ externalLink }}">{{ displayName }}</a>
