FACT-294 Only display fax heading when fax is present

--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -74,9 +74,11 @@
             {{ telephone.explanation }}
           </p>
           {% endfor %}
-          <p class="govuk-body-m">
-            Fax: {{ results.enquiries.fax.number }}
-          </p>
+          {% if results.enquiries.fax.number %}
+            <p class="govuk-body-m">
+              Fax: {{ results.enquiries.fax.number }}
+            </p>
+          {% endif %}
           <p class="govuk-body-m">
             <a class="govuk-link" href="https://www.gov.uk/call-charges">
               {{ callCharges }}
