FACT-295 Only display related content when external_link

--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -108,7 +108,7 @@
     </div>
 
     <div class="govuk-grid-column-one-third side-content">
-      {% if results['areas_of_law'] and results['areas_of_law'].length > 0 %}
+      {% if results['areas_of_law'] and results['areas_of_law'] |  selectattr("external_link") | length > 0 %}
         <div class="govuk-grid-row" id="areas-of-law">
           <h3 class="govuk-heading-m">
             {{ areasOfLawHeadingNotInPerson }}
@@ -118,21 +118,19 @@
           </p>
           <ul class="govuk-list">
             {% for area in results['areas_of_law'] | sort(attribute="name") %}
-            {% if area['display_name'] %}
-            {% set displayName = area['display_name'] %}
-            {% else %}
-            {% set displayName = area.name %}
-            {% endif %}
-            {% if area['display_external_link'] %}
-            {% set externalLink = area['display_external_link'] %}
-            {% else %}
-            {% set externalLink = area['external_link'] %}
-            {% endif %}
+              {% if area['display_name'] %}
+                {% set displayName = area['display_name'] %}
+              {% else %}
+                {% set displayName = area.name %}
+              {% endif %}
+              {% if area['display_external_link'] %}
+                {% set externalLink = area['display_external_link'] %}
+              {% else %}
+                {% set externalLink = area['external_link'] %}
+              {% endif %}
               <li>
                 {% if externalLink %}
                   <a class="govuk-link" href="{{ externalLink }}">{{ displayName }}</a>
-                {% else %}
-                  {{ displayName }}
                 {% endif %}
               </li>
             {% endfor %}
