--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -9,101 +9,101 @@
 {% endblock %}
 
 {% block content %}
-      <h1 class="govuk-heading-xl">
-          {{ h1 }}
-      </h1>
-      <div class="cookie-preference-success">
-        <div class="success-message" aria-labelledby="success-title" role="alert" tabindex="-1">
-          <h2 class="govuk-heading-m">
-              {{ saved }}
-          </h2>
-          <div>
-            <p class="govuk-body-m">{{ additionalCookies }}</p>
-          </div>
-          <a class="govuk-link" href="/">{{ homePageLink }}</a>
-        </div>
-      </div>
-      <p class="govuk-body-m">{{ p1 }}</p>
-      <p class="govuk-body-m">{{ p2 }}</p>
-      <ul class="govuk-list govuk-list--bullet">
-        {% for bullet in bullets %}
-          <li>{{ bullet }}</li>
-        {% endfor %}
-      </ul>
-      <h2 class="govuk-heading-l">
-        {{ h2 }}
+  <h1 class="govuk-heading-xl">
+    {{ h1 }}
+  </h1>
+  <div class="cookie-preference-success">
+    <div class="success-message" aria-labelledby="success-title" role="alert" tabindex="-1">
+      <h2 class="govuk-heading-m">
+        {{ saved }}
       </h2>
-      <h3 class="govuk-heading-m">
-        {{ h3 }}
-      </h3>
+      <div>
+        <p class="govuk-body-m">{{ additionalCookies }}</p>
+      </div>
+      <a class="govuk-link" href="/">{{ homePageLink }}</a>
+    </div>
+  </div>
+  <p class="govuk-body-m">{{ p1 }}</p>
+  <p class="govuk-body-m">{{ p2 }}</p>
+  <ul class="govuk-list govuk-list--bullet">
+    {% for bullet in bullets %}
+      <li>{{ bullet }}</li>
+    {% endfor %}
+  </ul>
+  <h2 class="govuk-heading-l">
+    {{ h2 }}
+  </h2>
+  <h3 class="govuk-heading-m">
+    {{ h3 }}
+  </h3>
 
-      {{ govukTable({
-        firstCellIsHeader: true,
-        caption: caption,
-        head: [
-          {
-            text: name,
-            classes: 'govuk-!-width-one-quarter'
-          },
-          {
-            text: purpose,
-            classes: 'govuk-!-width-one-half'
-          },
-          {
-            text: expires,
-            classes: 'govuk-!-width-one-quarter'
-          }
-        ],
-        rows: [
-          [
-            {
-              text: 'i18next'
-            },
-            {
-              text: language
-            },
-            {
-              text: year
-            }
-          ]
-        ]
-      }) }}
+  {{ govukTable({
+    firstCellIsHeader: true,
+    caption: caption,
+    head: [
+      {
+        text: name,
+        classes: 'govuk-!-width-one-quarter'
+      },
+      {
+        text: purpose,
+        classes: 'govuk-!-width-one-half'
+      },
+      {
+        text: expires,
+        classes: 'govuk-!-width-one-quarter'
+      }
+    ],
+    rows: [
+      [
+        {
+          text: 'i18next'
+        },
+        {
+          text: language
+        },
+        {
+          text: year
+        }
+      ]
+    ]
+  }) }}
 
-      <h3 class="govuk-heading-m">
-          {{ h4 }}
-      </h3>
+  <h3 class="govuk-heading-m">
+    {{ h4 }}
+  </h3>
 
-      {{ govukTable({
-        firstCellIsHeader: true,
-        caption: caption,
-        head: [
-          {
-            text: name,
-            classes: 'govuk-!-width-one-quarter'
-          },
-          {
-            text: purpose,
-            classes: 'govuk-!-width-one-half'
-          },
-          {
-            text: expires,
-            classes: 'govuk-!-width-one-quarter'
-          }
-        ],
-        rows: [
-          [
-            {
-              text: 'fact-cookie-preferences'
-            },
-            {
-              text: cookiePreferences
-            },
-            {
-              text: year
-            }
-          ]
-        ]
-      }) }}
+  {{ govukTable({
+    firstCellIsHeader: true,
+    caption: caption,
+    head: [
+      {
+        text: name,
+        classes: 'govuk-!-width-one-quarter'
+      },
+      {
+        text: purpose,
+        classes: 'govuk-!-width-one-half'
+      },
+      {
+        text: expires,
+        classes: 'govuk-!-width-one-quarter'
+      }
+    ],
+    rows: [
+      [
+        {
+          text: 'fact-cookie-preferences'
+        },
+        {
+          text: cookiePreferences
+        },
+        {
+          text: year
+        }
+      ]
+    ]
+  }) }}
 
   <h3 class="govuk-heading-m">
     {{ h5 }}
@@ -129,13 +129,35 @@
     rows: [
       [
         {
-          text: 'TBA'
+          text: '_ga'
         },
         {
-          text: "TBA"
+          text: gaDescription
         },
         {
-          text: 'TBA'
+          text: gaDuration
+        }
+      ],
+      [
+        {
+          text: '_gid'
+        },
+        {
+          text: gidDescription
+        },
+        {
+          text: gidDuration
+        }
+      ],
+      [
+        {
+          text: '_gat_UA-37377084-3'
+        },
+        {
+          text: gatDescription
+        },
+        {
+          text: gatDuration
         }
       ]
     ]
