FACT-215 fix tests

--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -61,7 +61,7 @@
       }) }}
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
       }) }}
     </form>
   </div>
