--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -37,7 +37,7 @@
     {{ govukButton({
       text: button,
       href: "/search-option",
-      classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
+      classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
       isStartButton: true
     }) }}
 
