--- a/src/main/views/postcode-search.njk
+++ b/src/main/views/postcode-search.njk
@@ -44,7 +44,7 @@
       }) }}
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
       }) }}
     </form>
     {% if hasNoResults %}
