--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -48,7 +48,7 @@
       }) }}
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
       }) }}
     </form>
   </div>
