--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -61,7 +61,7 @@
 </div>
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
       }) }}
     </form>
   </div>
