--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -16,7 +16,7 @@
   );var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-M3ZT6Q5');</script>
+  })(window,document,'script','dataLayer','GTM-N7NMJDR');</script>
 
   {% if showCookieBanner %}
     <div class="global-cookie-message">
@@ -28,6 +28,13 @@
     </div>
   {% endif %}
 
+{% endblock %}
+
+{% block bodyStart %}
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N7NMJDR"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 {% endblock %}
 
 {% block header %}
