--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -15,7 +15,31 @@
   background-color: govuk-colour('light-grey');
   padding: 10px 30px;
 
+  h1 {
+    margin-bottom: 0;
+  }
+
+  button {
+    margin-bottom: 0;
+  }
+
+  a {
+    margin-bottom: 0;
+  }
+
   p {
     margin-bottom: 0;
   }
+}
+
+.success-message {
+  border: 5px;
+  border-style: solid;
+  margin-bottom: 50px;
+  margin-top: 16px;
+  padding: 20px;
+}
+
+.cookie-preference-success {
+  display: none;
 }
