FACT-337 add error messages to GA datalayer

--- a/src/main/views/macros/error-summary.njk
+++ b/src/main/views/macros/error-summary.njk
@@ -10,4 +10,7 @@
       }
     ]
   }) }}
+  <script>
+    dataLayer.push({"errormsg": {{ text | dump | safe }}, "event": "Error shown"})
+  </script>
 {% endmacro %}
