--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -7,6 +7,7 @@
   {% include "webpack/css.njk" %}
   <script>
     dataLayer = [];
+    dataLayer.push({"language": "{{ language }}", "event": "Site language"})
   </script>
 
   <!-- Google Tag Manager -->
