--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -61,7 +61,8 @@
       }) }}
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
+        attributes: { onclick: "pushToDataLayer('chooseAction', 'service-choose-action');"}
       }) }}
     </form>
   </div>
