--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -48,7 +48,8 @@
       }) }}
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
+        attributes: { onclick: "pushToDataLayer('knowLocation', 'search-option');"}
       }) }}
     </form>
   </div>
