--- a/src/main/views/service.njk
+++ b/src/main/views/service.njk
@@ -61,7 +61,8 @@
 </div>
       {{ govukButton({
         text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
+        attributes: { onclick: "pushToDataLayer('serviceArea', 'service-areas');"}
       }) }}
     </form>
   </div>
