Fact 339 datalayer user selection (#243)
* FACT-339 add radio button selection to GA datalayer

* Fix unhandled promise exception

* tweak format of datalayer object

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -102,6 +102,23 @@
     e.preventDefault();
     history.go(-1);
   }
+  function pushToDataLayer(radioName, pageName) {
+    var buttons = document.getElementsByName(radioName);
+    for (var i = 0; i < buttons.length; i++) {
+      if (buttons[i].checked) {
+        const val_id = buttons[i].id;
+        const selector = 'label[for=' + val_id + ']';
+        const label = document.querySelector(selector);
+        const label_text = label.innerText;
+        window.dataLayer.push({
+          'event': 'Page selections',
+          'Page': pageName ,
+          'selection': label_text,
+        });
+        console.log(dataLayer)
+      }
+    }
+  }
   </script>
   {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   {% include "webpack/js.njk" %}
