--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -4,6 +4,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% block head %}
+  {% if seoMetadataDescription %}
+    <meta name="description" content="{{ seoMetadataDescription }}">
+  {% endif %}
   {% include "webpack/css.njk" %}
   <script>
     dataLayer = [];
@@ -119,15 +122,6 @@
     }
   }
   </script>
-  {% if seoMetadataDescription %}
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type":"Thing",
-        "description": "{{ seoMetadataDescription }}"
-      }
-    </script>
-  {% endif %}
   {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   {% include "webpack/js.njk" %}
 {% endblock %}
